--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,27 @@
-// Navigation Styles here
+// Navigation Styles heres
+.nav-container{
+    display:flex;
+    flex-direction: row;
+    width: 100%;
+    margin-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: 2px dashed silver;
+}
+.navegation{
+    margin-left: 890px;
+}
+
+nav{
+    margin-top: 9px;
+    margin-left: 268px;
+    font-size: 1.9rem;
+     
+    a{
+    text-decoration: none;
+    margin: 11px 20px;
+    color: black;
+    
+    }
+}
+ 
+  
