--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,11 +1,24 @@
+
+header{
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+
+    .the-bus{
+      margin-bottom: 20px;
+    }
+  }
+
+
 .home {
 
   .content-section {
     margin: 30px 0;
+    padding-top: 39px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-
+    border-top: 2px dashed @navigation-border;
    
     
     .text-content {
