--- a/less/variables.less
+++ b/less/variables.less
@@ -5,6 +5,7 @@
 @main-bg:  @white;
 @navigation-border: @silver;
 @footer-bg: @sandy-beach;
+@button-color: @Teal;
 
 // Colors
 @white: #FFFFFF;
@@ -12,3 +13,6 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
+@Teal:#008080;
+@white: #FFFFFF;
+@gossamer:#079292;
