--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,9 +1,4 @@
 // Mixins in here
-
-
-
-
-
 @b: @button-color;
 
 
@@ -27,4 +22,9 @@
     background-color: @gossamer;
     color: @white;
   }
+  @media @mobile{
+    width: 102%;
+    margin: 19px auto;
+    padding: 14px;
+    }
 }
